tmp/lesson10/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: course-app
  namespace: app
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - course-app.local
    secretName: course-app-tls
  rules:
    - host: course-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: course-app
                port:
                  number: 80
